# LP1-2021.1-Lista1

./: README.md  autor.md
fibonacci/: CMakeLists.txt  README.md
fibonacci/src/: function.cpp  function.h
fibonacci/tests/: CMakeLists.txt  main.cpp  test_01.cpp
filter/: CMakeLists.txt  README.md
filter/src/: filter_students.cpp  function.cpp  function.h
filter/tests/: .main 2.cpp.swp  .test_01.cpp.swp  CMakeLists.txt  main.cpp
filter/tests/include/tm/: test_manager.cpp
intervalos/: CMakeLists.txt  README.md
intervalos/data_expected/: .no-negatives_out.txt.swp  list_01_OUT.txt  list_02_OUT.txt  list_03_OUT.txt  list_04_OUT.txt  list_05_OUT.txt  list_06_OUT.txt  list_07_OUT.txt  list_08_OUT.txt  list_09_OUT.txt  list_10_OUT.txt
intervalos/data_in/: list_01.txt  list_02.txt  list_03.txt  list_04.txt  list_05.txt  list_06.txt  list_07.txt  list_08.txt  list_09.txt  list_10.txt  list_12.txt
intervalos/src/: main.cpp
inverter/: CMakeLists.txt  README.md
inverter/src/: function.cpp  function.h
inverter/tests/: CMakeLists.txt  main.cpp  test_01.cpp
minmax/: CMakeLists.txt  README.md
minmax/src/: function.cpp  function.h
minmax/tests/: main.cpp  test_01.cpp
negativos5/: CMakeLists.txt  README.md
negativos5/data_expected/: .2-negatives_out.txt.swp  .no-negatives_out.txt.swp
negativos5/data_in/: .2-negatives.txt.swp  2-negatives.txt  4-negatives.txt  all-negatives.txt
negativos5/src/: main.cpp
ponto_em_retangulo_1/: CMakeLists.txt  README.md
ponto_em_retangulo_1/src/: function.cpp  function.h
ponto_em_retangulo_1/tests/: main.cpp  test_01.cpp
ponto_em_retangulo_1/tests/lib/test_manager/include/: test_manager.h
ponto_em_retangulo_2/: CMakeLists.txt  README.md
ponto_em_retangulo_2/data_expected/: .list_01_OUT.txt.swp  degenerado_hor_fronteiras_GRANDE_OUT.txt  degenerado_vert_fronteiras_GRANDE_OUT.txt  regular_dentro_GRANDE_OUT.txt  regular_fora_8_OUT.txt  regular_fronteiras_GRANDE_OUT.txt  regular_fronteiras_canto_OUT.txt
ponto_em_retangulo_2/data_in/: .list_01.txt.swp  degenerado_hor_fronteiras_GRANDE.txt  degenerado_vert_fronteiras_GRANDE.txt  regular_dentro_GRANDE.txt  regular_fora_8.txt  regular_fronteiras_GRANDE.txt  regular_fronteiras_canto.txt  regular_fronteiras_laterais.txt
ponto_em_retangulo_2/src/: function.cpp  main.cpp
scripts/: verify-inputs.py
soma_vizinhos/: CMakeLists.txt  README.md
soma_vizinhos/data_expected/: negative_backward_OUT.txt  negative_forward_OUT.txt  positive_backward_OUT.txt  positive_forward_OUT.txt  zero_step_OUT.txt
soma_vizinhos/data_in/: negative_backward.txt  negative_forward.txt  positive_backward.txt  positive_forward.txt  zero_step.txt
soma_vizinhos/src/: main.cpp
